add login, register and home screens

--- a/AutoHunt/app/src/main/res/values/strings.xml
+++ b/AutoHunt/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <dimen name="material_text_display2">45sp</dimen>
     <dimen name="material_text_display3">56sp</dimen>
     <dimen name="material_text_display4">112sp</dimen>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
