--- a/AutoHunt/app/src/main/res/values/strings.xml
+++ b/AutoHunt/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <dimen name="material_text_display3">56sp</dimen>
     <dimen name="material_text_display4">112sp</dimen>
 
+    <dimen name="default_elevation">4dp</dimen>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
