--- a/AutoHunt/app/src/main/res/values/strings.xml
+++ b/AutoHunt/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
 
     <dimen name="default_elevation">4dp</dimen>
 
+    <string name="car_price_euro">%1$d €</string>
+    <string name="car_km">%1$d km</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
